--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -17,9 +17,21 @@
     <servlet-name>AdminDashboard</servlet-name>
     <url-pattern>/AdminDashboard</url-pattern>
   </servlet-mapping>
+  <servlet>
+  	<servlet-name>LogoutAdmin</servlet-name>
+  	<servlet-class>com.ems.controller.LogoutServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+  	<servlet-name>LogoutAdmin</servlet-name>
+  	<url-pattern>/LogoutAdmin</url-pattern>
+  </servlet-mapping>
+  
+  
   <welcome-file-list>
     <welcome-file>index.html</welcome-file>
   </welcome-file-list>
+  
+  
   <servlet>
     <servlet-name>EmployeeServlet</servlet-name>
     <servlet-class>com.ems.controller.EmployeeServlet</servlet-class>
@@ -48,12 +60,14 @@
   	<url-pattern>/deleteEmployee</url-pattern>
   </servlet-mapping>
   
+
   <servlet>
-  	<servlet-name>LogoutAdmin</servlet-name>
-  	<servlet-class>com.ems.controller.LogoutServlet</servlet-class>
+  	<servlet-name>AddDepartment</servlet-name>
+  	<servlet-class>com.ems.controller.DepartmentServlet</servlet-class>
   </servlet>
   <servlet-mapping>
-  	<servlet-name>LogoutAdmin</servlet-name>
-  	<url-pattern>/LogoutAdmin</url-pattern>
+  	<servlet-name>AddDepartment</servlet-name>
+  	<url-pattern>/addDepartment</url-pattern>
   </servlet-mapping>
+  
 </web-app>
